installer/fileserver/html/css/style.css
/* Header/Navigation section */

.header .github {
    position: absolute;
    right: 18px;
    top: 6px;
}

.header .logout {
    position: absolute;
    right: 210px;
    top: 6px
}

.header .icon-github-circled {
    font-size: 20px
}

.header .icon-logout {
    font-size: 20px
}

/* Clarity UI overrides */

.content-area {
    padding: 0 !important;
}

.card.transparent {
    background: none;
    border: none;
    box-shadow: none;
}

/* Custom elements and containers */

#infra-deploy-tools-container {
    margin-top: 36px;
    padding-bottom: 36px;
    background-color: #ececec;
}

#infra-deploy-tools-container .card-text {
    min-height: 120px;
}

#login-spinner {
    width: 100%;
    text-align: center;
    padding: 50px;
}

#feedback-alert {
    margin: 12px 12px 0 24px;
}

#feedback-link {
    max-width: inherit;
}

